--- a/Frontend/src/Styles/Pages/GeneralFroms.css
+++ b/Frontend/src/Styles/Pages/GeneralFroms.css
@@ -8,6 +8,14 @@
   margin-bottom: 15px;
 }
 
+.mainNav {
+  width: 480px;
+  display: grid;
+  grid-template-columns: 1fr auto auto auto;
+  align-items: center;
+  column-gap: 20px;
+}
+
 .main_olist {
   list-style-type: none;
 }
@@ -61,4 +69,20 @@
   align-items: center;
 }
 
+#btnUserCreate {
+  border: none;
+  padding: 0;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
 
+#imgUserCreate {
+  width: 1.75rem;
+  height: 1.75rem;
+}
+
+#btnUserCreate:hover {
+  background-color: transparent;
+  scale: 1.1;
+  transition: all 0.3s ease;
+}
