--- a/Frontend/src/components/NavPages/filterPages.css
+++ b/Frontend/src/components/NavPages/filterPages.css
@@ -1,53 +1,58 @@
 .filter-menu {
-    position: relative;
-  }
-  
-  .filter-button {
-    font-size: 1rem;
-    border: none;
-    border-radius: 20px;
-    background-color: transparent;
-    color: #13214E;
-    cursor: pointer;
-    transition: transform 0.3s ease;
-  }
-  
-  .filter-button:hover {
-    transform: scale(1.1);
-  }
-  
-  .options-container {
-    position: absolute;
-    top: calc(100% + 8px);
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    padding: 8px;
-    width: 160px;
-    background-color: #ffffff;
-    border-radius: 8px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
-    z-index: 1;
-  }
-  
-  .filter-checkbox {
-    margin-right: 8px;
-  }
-  
-  .filter-option {
-    font-size: 1rem;
-    padding: 8px 16px;
-    border: none;
-    background-color: transparent;
-    color: #13214E;
-    cursor: pointer;
-    width: 100%;
-    text-align: left;
-    transition: background-color 0.3s ease;
-  }
-  
-  .filter-option:hover {
-    background-color: rgba(0, 0, 0, 0.1);
-  }
-  
+  position: relative;
+}
+
+.filter-button {
+  font-size: 1rem;
+  border: none;
+  border-radius: 20px;
+  background-color: transparent;
+  color: #13214E;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.filter-button:hover {
+  transform: scale(1.1);
+}
+
+.options-container {
+  position: absolute;
+  top: calc(100% + 8px);
+  left: 0;
+  display: flex;
+  flex-direction: column;
+
+  width: 160px; /* Ajustado para coincidir con el ancho del menú de ordenamiento */
+  background-color: #ffffff;
+  border-radius: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+  z-index: 1;
+}
+
+.filter-label {
+  padding: 6px 8px;
+  cursor: pointer;
+}
+
+
+.filter-checkbox {
+  margin-right: 8px;
+}
+
+.filter-option {
+  font-size: 1rem;
+  padding: 8px 16px;
+  border: none;
+  background-color: transparent;
+  color: #13214E;
+  cursor: pointer;
+  width: 100%;
+  text-align: left;
+  transition: background-color 0.3s ease;
+}
+
+.filter-option:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
