--- a/Frontend/src/components/buttons/StyleEditButton.css
+++ b/Frontend/src/components/buttons/StyleEditButton.css
@@ -1,65 +1,64 @@
-.editBtn {
+.editBtn,
+.addBtn {
   display: flex;
   align-items: center;
   justify-content: center;
-    width: 52px;
-    height: 50px;
-    border-radius: 20px;
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-    position: relative;
-    transition: all 0.3s;
-  }
-  .editBtn::before {
-    content: "";
-    width: 200%;
-    height: 200%;
-    position: absolute;
-    z-index: 1;
-    transform: scale(0);
-    transition: all 0.3s;
-    border-radius: 50%;
-    filter: blur(10px);
-  }
-  .editBtn:hover::before {
-    transform: scale(1.1);
-  }
+  width: 52px;
+  height: 50px;
+  border-radius: 20px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  position: relative;
+  transition: all 0.3s;
+}
+.editBtn::before {
+  content: '';
+  width: 200%;
+  height: 200%;
+  position: absolute;
+  z-index: 1;
+  transform: scale(0);
+  transition: all 0.3s;
+  border-radius: 50%;
+  filter: blur(10px);
+}
+.editBtn:hover::before {
+  transform: scale(1.1);
+}
 
-  
-  .editBtn svg {
-    height: 15px;
-    fill: grey;
-    z-index: 3;
-    transition: all 0.2s;
-    transform-origin: bottom;
-    overflow: visible;
-  }
-  .editBtn:hover svg {
-    transform: rotate(-15deg) translateX(5px);
-  }
-  .editBtn::after {
-    content: "";
-    width: 25px;
-    height: 1.5px;
-    position: absolute;
-    bottom: 17px;
-    left: -5px;
-    background-color: grey;
-    border-radius: 2px;
-    z-index: 2;
-    transform: scaleX(0);
-    transform-origin: left;
-    transition: transform 0.5s ease-out;
-  }
-  .editBtn:hover::after {
-    transform: scaleX(1);
-    left: 0px;
-    transform-origin: right;
-  }
-  
+.editBtn svg {
+  height: 15px;
+  fill: grey;
+  z-index: 3;
+  transition: all 0.2s;
+  transform-origin: bottom;
+  overflow: visible;
+}
+.editBtn:hover svg {
+  transform: rotate(-15deg) translateX(5px);
+}
+.editBtn::after {
+  content: '';
+  width: 25px;
+  height: 1.5px;
+  position: absolute;
+  bottom: 17px;
+  left: -5px;
+  background-color: grey;
+  border-radius: 2px;
+  z-index: 2;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.5s ease-out;
+}
+.editBtn:hover::after {
+  transform: scaleX(1);
+  left: 0px;
+  transform-origin: right;
+}
 
-  @media screen and (min-width: 480px) {
+@media screen and (min-width: 480px) {
   .editBtn svg {
     height: 17px;
   }
