--- a/Frontend/src/Styles/Pages/GeneralFroms.css
+++ b/Frontend/src/Styles/Pages/GeneralFroms.css
@@ -44,16 +44,17 @@
 
 /* Boton de crear */
 .mainCreateBtn {
-  font-size: 1rem;
-  padding: 5px 15px;
-  width: auto;
-  border-radius: 20px;
+  border: none;
+  padding: 0;
   background-color: transparent;
-  border: 1px solid #13214E;
+  transition: all 0.3s ease;
+  cursor: pointer;
 }
 
 .mainCreateBtn:hover {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: transparent;
+  scale: 1.1;
+  transition: all 0.3s ease;
 }
 
 .mainUpdateBtn {
@@ -69,20 +70,8 @@
   align-items: center;
 }
 
-#btnUserCreate {
-  border: none;
-  padding: 0;
-  transition: all 0.3s ease;
-  cursor: pointer;
-}
 
-#imgUserCreate {
+.imgCreateBtn {
   width: 1.75rem;
   height: 1.75rem;
-}
-
-#btnUserCreate:hover {
-  background-color: transparent;
-  scale: 1.1;
-  transition: all 0.3s ease;
 }
