--- a/Frontend/src/components/InfoModal/ModalComponent.css
+++ b/Frontend/src/components/InfoModal/ModalComponent.css
@@ -40,16 +40,15 @@
     justify-content: center;
     z-index: 5;
   }
+
   
   .modal-content {
-    background-color: #ffffff;
+    background: white;
     padding: 20px;
     border-radius: 8px;
     max-width: 500px;
     width: 100%;
-    opacity: 1;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    animation: modal-show 0.3s ease;
     z-index: 6;
   }
   
@@ -74,9 +73,6 @@
     margin: 0;
   }
 
-  .modal-body {
-    background-color: #ffffff;
-  }
   
   .modal-body .modal-field {
     margin: 10px 0;
