--- a/Frontend/src/components/PagesComponents/Sales/SalesListTable.css
+++ b/Frontend/src/components/PagesComponents/Sales/SalesListTable.css
@@ -6,7 +6,7 @@
 }
 
 #sales_table {
-  max-width: 100%;
+  max-width: 90%;
   border-radius: 8px;
   padding: 10px 15px;
   margin-top: 15px;
@@ -19,6 +19,7 @@
   justify-content: space-between;
   font-weight: 700;
   margin-bottom: 1rem;
+  margin-left: 10px;
 }
 
 #salesTableBody {
@@ -34,6 +35,7 @@
 #salesTableBodyRow {
   display: flex;
   justify-content: space-between;
+  margin: 10px;
 }
 
 #salesTableHeadRowNameSalesAgent {
@@ -44,7 +46,7 @@
 
 #salesTableHeadRowName,
 #salesTableBodyRowName {
-  width: 150px;
+  width: 100px;
 }
 
 #salesTableHeadRowProduct,
@@ -52,26 +54,26 @@
   width: 150px;
 }
 
-#salesTableHeadRowCustomer,
+/* #salesTableHeadRowCustomer,
 #saleTableBodyRowCustomer {
   width: 250px;
-}
+} */
 
 #salesTableHeadRowEstatus,
 #saleTableBodyRowEstatus {
   width: 80px;
-  padding-left: 70px;
+  padding-left: 20px;
 }
 
-#salesTableHeadRowDate,
+/* #salesTableHeadRowDate,
 #salesTableBodyRowDate {
   width: 80px;
   padding-left: 100px;
-}
+} */
 
 #salesTableBodyRowActions,
 #salesTableHeadRowActions {
-  width: 200px;
+  width: 300px;
 }
 
 #salesTableHeadRowActions {
@@ -79,5 +81,6 @@
 }
 #salesTableBodyRowActions {
   display: flex;
-  padding-left: 90px;
+  padding-left: 60px;
+  gap: 10px;
 }
