--- a/Frontend/src/components/buttons/StyleEditButton.css
+++ b/Frontend/src/components/buttons/StyleEditButton.css
@@ -3,10 +3,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 52px;
-  height: 50px;
+  width: 46px;
+  height: 46px;
   border-radius: 20px;
   border: none;
+  overflow: hidden;
   background-color: transparent;
   cursor: pointer;
   position: relative;
