--- a/Frontend/src/components/buttons/StatesBtn/CompletButton.css
+++ b/Frontend/src/components/buttons/StatesBtn/CompletButton.css
@@ -29,7 +29,7 @@
     justify-content: center;
     background-color: transparent;
     border: none;
-    cursor: pointer;
+    cursor:default;
     transition: background-color 0.3s;
     opacity: 0.5;
 }
