--- a/Frontend/src/pages/Home/Home.css
+++ b/Frontend/src/pages/Home/Home.css
@@ -27,11 +27,16 @@
   margin: 1rem;
 }
 
+.loading {
+  margin-left: 50px;
+}
+
 @media screen and (max-width: 480px) {
   #charts {
     flex-direction: column;
-    width: 115%;
-    margin: 1rem;
+    width: 70%;
+    margin-right: 160px;
+    /* margin: 1rem; */
     gap: 4rem;
   }
 }
