--- a/Frontend/src/components/checkbox/CustomCheckbox.css
+++ b/Frontend/src/components/checkbox/CustomCheckbox.css
@@ -14,6 +14,7 @@
     position: relative;
     display: block;
     overflow: hidden;
+    transform: translateX(-10px);
   }
   
   .checkbox-wrapper .label {
