--- a/Frontend/src/layout/InitialLayout.css
+++ b/Frontend/src/layout/InitialLayout.css
@@ -1,116 +1,136 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
+/* src/layouts/InitialLayout.css */
 .initial-layout-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    overflow: hidden;
-  }
-  
-  .full-screen {
-    background-color: black;
-    color: white;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden; /* Para ocultar el desbordamiento durante la transición */
+}
 
+.full-screen {
+  background-color: black;
+  color: white;
+}
+
+.split-screen {
+  flex-direction: row;
+}
+
+.welcome-screen {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.animated-initial {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: width 1s ease;
+}
+
+.left-pane, .right-pane {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden; /* Para evitar desbordamiento */
+}
+
+.left-pane {
+  background-color: black;
+  color: white;
+}
+
+.right-pane {
+  background-color: white;
+  color: black;
+  transition: width 1s ease; 
+}
+
+.start-button {
+  margin-top: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.start-button {
+  position: absolute;
+  bottom: 35%;
+  left: 46%;
+  transition: all 0.5s ease;
+}
+
+.start-button {
+  width: 10em;
+  height: 3.5em;
+  border: 3px ridge #149CEA;
+  outline: none;
+  background-color: transparent;
+  color: white;
+  transition: 1s;
+  border-radius: 0.3em;
+  font-family: 'montserrat', sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.start-button::after {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: 3%;
+  width: 95%;
+  height: 40%;
+  background-color: black;
+  transition: 0.5s;
+  transform-origin: center;
+}
+
+.start-button::before {
+  content: "";
+  transform-origin: center;
+  position: absolute;
+  top: 80%;
+  left: 3%;
+  width: 95%;
+  height: 40%;
+  background-color: black;
+  transition: 0.5s;
+}
+
+.start-button:hover::before, .start-button:hover::after {
+  transform: scale(0)
+}
+
+.start-button:hover {
+  box-shadow: inset 0px 0px 25px #1479EA;
+}
+
+@media screen and (max-width: 800px) {
+  .animated-initial {
+    transition: width 1s ease;
   }
 
-  .logo-cosmic-intro {
-    width: 550px;
-    transform: translateY(-50px);
-    transition: all 0.5s ease;
-  }
-
-  .logo-cosmic-intro-dos{
-    width: 500px;
-    transform: translateY(-50px);
-  }
-  
-  .split-screen {
-    flex-direction: row;
-
-  }
-  
-  .welcome-screen {
-    text-align: center;
-  }
-  
-  .login-screen {
-    display: flex;
+  .left-pane {
     width: 100%;
-    height: 100%;
-  }
-  
-  .left-panel, .right-panel {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .left-panel {
-    background-color: black;
-    color: white;
-  }
-  
-  a {
-    text-decoration: none;
-    color: inherit;
+    transition: width 1s ease;
   }
 
-  .start-button {
-    position: absolute;
-    bottom: 40%;
-    left: 44.5%;
-
+  .initial-layout-container.split-screen .left-pane {
+    width: 0;
   }
 
-  .start-button {
-    width: 10em;
+  .initial-layout-container.split-screen .right-pane {
+    width: 100%;
+  }
 
-    height: 3.5em;
-    border: 3px ridge #149CEA;
-    outline: none;
-    background-color: transparent;
-    color: white;
-    transition: 1s;
-    border-radius: 0.3em;
-    font-family: 'montserrat', sans-serif;
-    font-size: 16px;
-    font-weight: bold;
-    cursor: pointer;
+  .right-pane {
+    visibility: visible;
   }
-  
-  .start-button::after {
-    content: "";
-    position: absolute;
-    top: -10px;
-    left: 3%;
-    width: 95%;
-    height: 40%;
-    background-color: black;
-    transition: 0.5s;
-    transform-origin: center;
-  }
-  
-  .start-button::before {
-    content: "";
-    transform-origin: center;
-    position: absolute;
-    top: 80%;
-    left: 3%;
-    width: 95%;
-    height: 40%;
-    background-color: black;
-    transition: 0.5s;
-  }
-  
-  .start-button:hover::before, .start-button:hover::after {
-    transform: scale(0)
-  }
-  
-  .start-button:hover {
-    box-shadow: inset 0px 0px 25px #1479EA;
-  }
-  
+}
