--- a/Frontend/src/Styles/Pages/GeneralFroms.css
+++ b/Frontend/src/Styles/Pages/GeneralFroms.css
@@ -26,21 +26,11 @@
   margin: 10px 0 15px 0;
   background-color: #ffffff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+  border-radius: 8px;
   display: flex;
   flex-direction: column;
 }
 
-.main_ilist > h2 {
-  font-size: 1.6rem;
-  text-align: center;
-  margin-bottom: 5px;
-  padding-bottom: 10px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-}
-
-.main_ilist > p {
-  font-size: 0.8rem;
-}
 
 /* Boton de crear */
 .mainCreateBtn {
@@ -96,3 +86,22 @@
   color: red;
 }
 
+
+@media screen and (max-width: 600px) {
+
+  #user_nav {
+    width: 320px;
+    grid-template-columns: 1fr auto auto auto;
+  }
+
+  .groupSearch {
+    max-width: 180px;
+    font-size: 1rem;
+  }
+
+  .checkbox-wrapper-35 {
+    display: none;
+  }
+
+  
+}
