--- a/Frontend/src/components/PagesComponents/Customer/CustomerListTable.css
+++ b/Frontend/src/components/PagesComponents/Customer/CustomerListTable.css
@@ -1,5 +1,5 @@
 .customerTable {
-    max-width: 700px;
+    max-width: 750px;
     border-radius: 8px;
     padding: 10px 15px;
     margin-top: 15px;
@@ -10,6 +10,8 @@
 .customerTableHead {
     display: flex;
     justify-content: space-between;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 5px;
 }
 
 .customerTableBody {
@@ -23,17 +25,18 @@
     column-gap: 10px;
 }
 
-.headRow {
-    padding-bottom: 5px;
-    border-bottom: 1px solid #ccc;
-}
-
 .customerTableBodyRow {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-left: 5px;
     column-gap: 10px;
     height: 50px;
+    border-bottom: 1px solid #eee;
+}
+
+.customerTableBodyRow:hover {
+    background-color: #eee;
 }
 
 /* Puedes ajustar los estilos adicionales según sea necesario */
@@ -46,7 +49,7 @@
 
 .customerTableHeadRowCompany,
 .customerTableBodyRowCompany {
-    width: 240px;
+    width: 250px;
 }
 
 
