--- a/Frontend/src/components/PagesComponents/User/UserListTable.css
+++ b/Frontend/src/components/PagesComponents/User/UserListTable.css
@@ -1,5 +1,5 @@
 .userTable {
-    max-width: 700px;
+    max-width: 750px;
     border-radius: 8px;
     padding: 10px 15px;
     margin-top: 15px;
@@ -10,6 +10,7 @@
 .userTableHead {
     display: flex;
     justify-content: space-between;
+    border-bottom: 1px solid #ccc;
 }
 
 .userTableBody {
@@ -21,16 +22,19 @@
     font-weight: bold;
     text-align: start;
     padding-bottom: 5px;
-    border-bottom: 1px solid #ccc;
-
 }
 
 .userTableBodyRow {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-left: 5px;
     height: 50px;
+    border-bottom: 1px solid #eee;
+}
 
+.userTableBodyRow:hover {
+    background-color: #eee;
 }
 
 /* Puedes ajustar los estilos adicionales según sea necesario */
