Varios cambios centrado en las tablas y productos

--- a/Frontend/src/Styles/Pages/StyleProductList.css
+++ b/Frontend/src/Styles/Pages/StyleProductList.css
@@ -9,6 +9,14 @@
     font-size: 1rem;
 }
 
+.active {
+    color: green;
+}
+
+.inactive {
+    color: red;
+}
+
 @media screen and (max-width: 600px) {
 
     #product_list {
