--- a/Frontend/src/Styles/Pages/GeneralFroms.css
+++ b/Frontend/src/Styles/Pages/GeneralFroms.css
@@ -31,6 +31,16 @@
   flex-direction: column;
 }
 
+.noResult {
+  font-size: 1rem;
+  padding: 8px 8px;
+  border: none;
+  background-color: transparent;
+  color: #13214E;
+  width: 100%;
+
+}
+
 
 /* Boton de crear */
 .mainCreateBtn {
