--- a/Frontend/src/components/NavPages/filterPages.css
+++ b/Frontend/src/components/NavPages/filterPages.css
@@ -24,10 +24,11 @@
   display: flex;
   flex-direction: column;
 
-  width: 160px; /* Ajustado para coincidir con el ancho del menú de ordenamiento */
+  width: 160px; 
   background-color: #ffffff;
   border-radius: 8px;
   border: 1px solid rgba(0, 0, 0, 0.2);
+  overflow: hidden;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
   z-index: 1;
 }
@@ -35,6 +36,11 @@
 .filter-label {
   padding: 6px 8px;
   cursor: pointer;
+}
+
+.filter-label:hover,
+.filter-checkbox:hover {
+  background-color: #eee;
 }
 
 
@@ -55,5 +61,18 @@
 }
 
 .filter-option:hover {
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: #eee;
+}
+
+
+@media screen and (max-width: 600px) {
+
+  .options-container {
+    position: absolute;
+    top: calc(100% + 8px);
+    left: -100px;
+    display: flex;
+    flex-direction: column;
+  }
+  
 }
