--- a/Frontend/src/components/NavPages/sortPages.css
+++ b/Frontend/src/components/NavPages/sortPages.css
@@ -14,14 +14,15 @@
   
   .dropdown-options {
     position: absolute;
-    top: 100%;
+    top : calc(100% + 8px);
     left: 0;
     width: 170px;
     z-index: 1;
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+    overflow: hidden;
   }
   
   .dropdown-option {
@@ -30,7 +31,7 @@
   }
   
   .dropdown-option:hover {
-    background-color: #f0f0f0;
+    background-color: #eee;
   }
   
   .selected {
@@ -46,3 +47,14 @@
     margin-left: 4px;
   }
   
+  
+@media screen and (max-width: 600px) {
+
+  .dropdown-options {
+    position: absolute;
+
+    left: -150px;
+
+  }
+  
+}
