--- a/Frontend/src/components/PagesComponents/Visits/VisitListTable.css
+++ b/Frontend/src/components/PagesComponents/Visits/VisitListTable.css
@@ -18,7 +18,7 @@
   flex-direction: column;
 }
 
-.visitTableHead .headRow {
+.visitTableHead{
   font-weight: bold;
   text-align: start;
   padding-bottom: 5px;
@@ -28,9 +28,14 @@
 #visitTableBodyRow {
   display: flex;
   justify-content: space-between;
-
+  border-bottom: 1px solid #eee;
+  padding-left: 5px;
   align-items: center;
   height: 50px;
+}
+
+#visitTableBodyRow:hover {
+  background-color: #eee;
 }
 
 #VisitTableHeadRowRef,
