--- a/Frontend/src/components/ThemeSwicher.css
+++ b/Frontend/src/components/ThemeSwicher.css
@@ -104,6 +104,7 @@
   position: absolute;
   z-index: 3;
   right: 0;
+  top: 70px;
   opacity: 0;
   visibility: hidden;
   transition: all 0.3s ease;
