--- a/Frontend/src/components/Header/Notification.css
+++ b/Frontend/src/components/Header/Notification.css
@@ -12,8 +12,8 @@
   
   .notification-count {
     position: absolute;
-    top: -5px; /* Ajusta este valor según sea necesario */
-    right: -5px; /* Ajusta este valor según sea necesario */
+    top: -5px; 
+    right: -5px; 
     background: red;
     color: white;
     border-radius: 50%;
