--- a/Frontend/src/components/PagesComponents/Shipment/DeliveryRoutes.css
+++ b/Frontend/src/components/PagesComponents/Shipment/DeliveryRoutes.css
@@ -1,9 +1,9 @@
-.delivery-route {
+/* .delivery-route {
   display: flex;
-  flex-wrap: wrap; /* Ajusta para que los elementos se envuelvan si es necesario */
-  gap: 1rem;
-  margin-top: 1rem; /* Espacio entre la lista de usuarios y los envíos */
-}
+  flex-wrap: wrap; 
+  gap: 10px;
+  margin-top: 20px; 
+} */
 
 .envios {
   display: flex;
@@ -33,11 +33,11 @@
   max-height: calc(100vh - 100px);
   overflow-y: auto;
   padding: 10px;
-  background-color: #fff;
+  background-color: #ffffff;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 8px;
   z-index: 1000;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   display: none;
 }
 
