--- a/Frontend/src/Styles/Pages/DymanicsPopUps.css
+++ b/Frontend/src/Styles/Pages/DymanicsPopUps.css
@@ -1,133 +1,150 @@
-.dynamicFromModal {
-    margin-bottom: 30px;
+.input-container {
+  position: relative;
+  margin: 30px auto;
+  width: 300px;
 }
 
-.input-container {
-    position: relative;
-    margin: 30px auto;
-    width: 300px;
-  }
-  
-  .input-container .inputText,
-  .input-container input[type="email"],
-  .input-container input[type="password"],
-  .input-container input[type="textarea"],
-  .input-container input[type="date"] {
-    font-size: 20px;
-    width: 100%;
-    border: none;
-    border-bottom: 2px solid #ccc;
-    padding: 5px 0;
-    background-color: transparent;
-    outline: none;
-  }
+.input-container .inputText,
+.input-container input[type="email"],
+.input-container input[type="password"],
+.input-container input[type="textarea"],
+.input-container input[type="date"] {
+  font-size: 20px;
+  width: 100%;
+  border: none;
+  border-bottom: 2px solid #ccc;
+  padding: 5px 0;
+  background-color: transparent;
+  outline: none;
+}
 
-  .inputSelect {
-    width: 300px;
-    font-size: 20px;
-    background-color: transparent;
-    border: none;
-    border-bottom: 2px solid #ccc;
-    padding: 5px 10px;
-  }
+.inputSelect {
+  width: 300px;
+  font-size: 20px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid #ccc;
+  padding: 5px 10px;
+}
 
-  .input-container input[type="date"] { 
-    color: #ccc;
-  }
+.input-container input[type="date"] { 
+  color: #ccc;
+}
 
-  .input-container input[type="date"]:focus,
-  .input-container input[type="date"]:valid {
-    color: black;
-  }
+.input-container input[type="date"]:focus,
+.input-container input[type="date"].has-content {
+  color: black;
+}
 
-  .input-container .label,
-  .input-container .labelSelect {
-    position: absolute;
-    top: 0;
-    left: 0;
-    color: #ccc;
-    transition: all 0.3s ease;
-    pointer-events: none;
-  }
-  
-  .has-selection ~ .labelSelect,
-  .input-container .has-selection:focus ~ .labelSelect{
-    top: -20px;
-    font-size: 16px;
-    color: #333;
-  }
-  
+.input-container .label,
+.input-container .labelSelect {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #ccc;
+  transition: all 0.3s ease;
+  pointer-events: none;
+}
 
-  /* que la option de select tenga valor */
-  
-  .input-container .inputText:focus ~ .label,
-  .input-container .inputText:valid ~ .label{
-    top: -20px;
-    font-size: 16px;
-    color: #333;
-  }
-  
-  .input-container .underline {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 2px;
-    width: 100%;
-    background-color: #333;
-    transform: scaleX(0);
-    transition: all 0.3s ease;
-  }
-  
-  .input-container .inputText:focus ~ .underline,
-  .input-container .inputText:valid ~ .underline {
-    transform: scaleX(1);
-  }
+.has-selection ~ .labelSelect,
+.input-container .has-selection:focus ~ .labelSelect,
+.input-container input[type="date"].has-content ~ .label {
+  top: -20px;
+  font-size: 16px;
+  color: #333;
+}
 
-  /* Hacer que el date siempre este en focus para que el label este arriba */
-  .input-container input[type="date"] ~ .label {
-    top: -20px;
-    font-size: 16px;
+.input-container input[type="date"]:not(:placeholder-shown) ~ .label {
+  color: #ccc;
+}
 
-  }
+.input-container .inputText:focus ~ .label,
+.input-container .inputText:not(:placeholder-shown) ~ .label,
+.input-container input[type="date"]:focus ~ .label,
+.input-container input[type="date"].has-content ~ .label,
+.input-container input[type="email"]:focus ~ .label,
+.input-container input[type="email"]:not(:placeholder-shown) ~ .label,
+.input-container input[type="password"]:focus ~ .label,
+.input-container input[type="password"]:not(:placeholder-shown) ~ .label {
+  top: -20px;
+  font-size: 16px;
+  color: #333;
+}
 
-  .swal2-actions {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-  }
+.input-container .underline {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 2px;
+  width: 100%;
+  background-color: #333;
+  transform: scaleX(0);
+  transition: all 0.3s ease;
+}
 
+.input-container input[type="date"]:not(:placeholder-shown) ~ .underline {
+  transform: scaleX(0);
+}
 
-  .customConfirmBtnClass,
-  .customCancelBtnClass {
-    background-color: transparent;
-    border: transparent;
-    border-radius: 20px;
-    padding: 5px 15px;
-    font-size: 16px;
-    margin: 5ps 10px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-  }
+.input-container .inputText:focus ~ .underline,
+.input-container .inputText:not(:placeholder-shown) ~ .underline,
+.input-container input[type="date"]:focus ~ .underline,
+.input-container input[type="date"].has-content ~ .underline,
+.input-container input[type="email"]:focus ~ .underline,
+.input-container input[type="email"]:not(:placeholder-shown) ~ .underline,
+.input-container input[type="password"]:focus ~ .underline,
+.input-container input[type="password"]:not(:placeholder-shown) ~ .underline {
+  transform: scaleX(1);
+}
 
-  .customConfirmBtnClass {
-    color: #13214E;
+/* Hacer que el date siempre esté en focus para que el label esté arriba */
+.input-container input[type="date"] ~ .label {
+  top: -20px;
+  font-size: 16px;
+}
 
-    background-color: rgba(0, 128, 0, 0.5);
-  }
+.swal2-actions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
 
-  .customCancelBtnClass {
-    color: #13214E;
+.customConfirmBtnClass,
+.customCancelBtnClass {
+  background-color: transparent;
+  border: transparent;
+  border-radius: 20px;
+  padding: 5px 15px;
+  font-size: 16px;
+  margin: 5px 10px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
 
-    background-color: rgba(255, 0, 0, 0.5);
-  }
+.customConfirmBtnClass {
+  color: #13214E;
+  background-color: rgba(0, 128, 0, 0.5);
+}
 
-  .customConfirmBtnClass:hover {
-    background-color: rgba(0, 128, 0, 1);
-    color: white;
-  }
+.customCancelBtnClass {
+  color: #13214E;
+  background-color: rgba(255, 0, 0, 0.5);
+}
 
-  .customCancelBtnClass:hover {
-    background-color: rgba(255, 0, 0, 1);
-    color: white;
-  }
+.customConfirmBtnClass:hover {
+  background-color: rgba(0, 128, 0, 1);
+  color: white;
+}
+
+.customCancelBtnClass:hover {
+  background-color: rgba(255, 0, 0, 1);
+  color: white;
+}
+
+.info-text {
+  font-style: italic;
+  font-size: 14px;
+  text-align: end;
+  color: #ccc;
+}
