--- a/Frontend/src/Styles/Pages/StyleProductList.css
+++ b/Frontend/src/Styles/Pages/StyleProductList.css
@@ -1,7 +1,7 @@
 #product_list {
-    width: 450px;
+    width: 700px;
     display: grid;
-    grid-template-columns: 240px 240px;
+    grid-template-columns: 235px 235px 235px;
     column-gap: 20px;
 }
 
@@ -17,12 +17,21 @@
     color: red;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 850px) {
+
+    #product_list {
+        width: 550px;
+        grid-template-columns: 250px 250px;
+
+    }
+    
+}
+@media screen and (max-width: 645px) {
 
     #product_list {
         width: 320px;
-        grid-template-columns: 260px;
-        place-content: center;
+        grid-template-columns: 250px;
+    
     }
     
 }
