--- a/Frontend/src/components/PagesComponents/DeliveryNotes/NoteListTable.css
+++ b/Frontend/src/components/PagesComponents/DeliveryNotes/NoteListTable.css
@@ -1,7 +1,7 @@
 #note_list {
   width: 850px;
   display: grid;
-  grid-template-columns: 350px 350px;
+  grid-template-columns: 350px 350px 350px;
   column-gap: 20px;
 }
 
@@ -9,7 +9,7 @@
   max-width: 1100px;
   border-radius: 8px;
   padding: 10px 15px;
-  margin-top: 15px;
+  margin-top: 10px;
   background-color: #ffffff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
 }
@@ -96,6 +96,14 @@
   display: flex;
   align-items: center;
 }
+
+@media screen and (max-width: 1190px) {
+  #note_list {
+    width: 1200px;
+    grid-template-columns: 350px 350px;
+  }
+}
+
 
 @media screen and (max-width: 815px) {
   #note_list {
