--- a/Frontend/src/components/PagesComponents/User/UserListTable.css
+++ b/Frontend/src/components/PagesComponents/User/UserListTable.css
@@ -7,18 +7,16 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
 }
 
-.userTableHead {
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid #ccc;
-}
 
 .userTableBody {
     display: flex;
     flex-direction: column;
 }
 
-.userTableHead .headRow {
+.userTableHead {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #ccc;
     font-weight: bold;
     text-align: start;
     padding-bottom: 5px;
@@ -27,10 +25,9 @@
 .userTableBodyRow {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding-left: 5px;
-    height: 50px;
     border-bottom: 1px solid #eee;
+    align-items: center;
+    height: 50px;
 }
 
 .userTableBodyRow:hover {
@@ -44,19 +41,23 @@
     width: 280px;
 }
 
+.userTableBodyRowName {
+    padding-left: 5px;
+}
+
 .userTableHeadRowRole,
 .userTableBodyRowRole {
     width: 100px;
 }
 
 .userTableHeadRowActive,
-.userTableBodyRowActive {
+#userTableBodyRowActive {
     width: 60px;
 }
 
-.userTableBodyRowActions,
+.userTableHeadRowActions,
 .userTableHeadRowActions {
-    width: 180px;
+    width: 150px;
 }
 
 .userTableHeadRowActions{
